[gd_scene load_steps=15 format=2]

[ext_resource path="res://CharacterScreen.gd" type="Script" id=1]
[ext_resource path="res://Graphics/bg_01.png" type="Texture" id=2]
[ext_resource path="res://Graphics/button_01.png" type="Texture" id=3]
[ext_resource path="res://Graphics/button_02.png" type="Texture" id=4]
[ext_resource path="res://Fonts/BLKCHCRY.tres" type="DynamicFont" id=5]
[ext_resource path="res://Graphics/slot_01.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Roboto_regular_16.tres" type="DynamicFont" id=7]
[ext_resource path="res://Objects/Misc/Currency.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.776471, 0.643137, 0.466667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.768627, 0.603922, 0.45098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.776471, 0.643137, 0.466667, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.776471, 0.643137, 0.466667, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.772549, 0.631373, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.756863, 0.584314, 0.435294, 1 )
border_color = Color( 0.772549, 0.631373, 0.462745, 1 )

[node name="Character" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
margin_right = 1365.0
margin_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="FightButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 759.0
margin_top = 421.0
margin_right = 1184.0
margin_bottom = 692.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/FightButton"]
margin_left = 30.0
margin_top = -54.0
margin_right = 208.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "Into the Darkness"
align = 1
valign = 1
autowrap = true

[node name="InventoryBtn" type="TextureButton" parent="CanvasLayer"]
margin_left = 571.0
margin_top = 481.0
margin_right = 925.0
margin_bottom = 631.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/InventoryBtn"]
margin_left = 4.0
margin_top = 36.0
margin_right = 182.0
margin_bottom = 82.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "Inventory"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="NewBtn" type="TextureButton" parent="CanvasLayer"]
margin_left = 387.0
margin_top = 481.0
margin_right = 741.0
margin_bottom = 631.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/NewBtn"]
margin_left = 44.0
margin_top = 4.0
margin_right = 222.0
margin_bottom = 99.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 5 )
text = "Return to Menu"
align = 1
valign = 1
autowrap = true

[node name="Character" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Border" type="TextureRect" parent="CanvasLayer/Character"]
margin_left = 60.0
margin_top = 41.0
margin_right = 316.0
margin_bottom = 297.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Portrait" type="TextureRect" parent="CanvasLayer/Character/Border"]
show_behind_parent = true
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Stats" type="VBoxContainer" parent="CanvasLayer"]
editor/display_folded = true
margin_left = 66.0
margin_top = 253.0
margin_right = 314.0
margin_bottom = 644.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="Level" type="Label" parent="CanvasLayer/Stats"]
margin_right = 248.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lvl:"

[node name="Experience" type="Label" parent="CanvasLayer/Stats"]
margin_top = 50.0
margin_right = 248.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exp:"

[node name="Hitpoints" type="Label" parent="CanvasLayer/Stats"]
margin_top = 100.0
margin_right = 248.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP:"

[node name="Skillpoints" type="Label" parent="CanvasLayer/Stats"]
margin_top = 150.0
margin_right = 248.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SP:"

[node name="Strength" type="HBoxContainer" parent="CanvasLayer/Stats"]
margin_top = 200.0
margin_right = 248.0
margin_bottom = 246.0

[node name="Strength" type="Label" parent="CanvasLayer/Stats/Strength"]
margin_right = 132.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength:"

[node name="Up" type="Button" parent="CanvasLayer/Stats/Strength"]
visible = false
margin_left = 136.0
margin_right = 156.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"

[node name="Vitality" type="HBoxContainer" parent="CanvasLayer/Stats"]
margin_top = 250.0
margin_right = 248.0
margin_bottom = 296.0

[node name="Vitality" type="Label" parent="CanvasLayer/Stats/Vitality"]
margin_right = 124.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vitality:"

[node name="Up" type="Button" parent="CanvasLayer/Stats/Vitality"]
visible = false
margin_left = 136.0
margin_right = 156.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"

[node name="Intelligence" type="HBoxContainer" parent="CanvasLayer/Stats"]
margin_top = 300.0
margin_right = 248.0
margin_bottom = 346.0

[node name="Intelligence" type="Label" parent="CanvasLayer/Stats/Intelligence"]
margin_right = 171.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Intelligence:"

[node name="Up" type="Button" parent="CanvasLayer/Stats/Intelligence"]
visible = false
margin_left = 136.0
margin_right = 156.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"

[node name="Speed" type="HBoxContainer" parent="CanvasLayer/Stats"]
margin_top = 350.0
margin_right = 248.0
margin_bottom = 396.0

[node name="Speed" type="Label" parent="CanvasLayer/Stats/Speed"]
margin_right = 99.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed:"

[node name="Up" type="Button" parent="CanvasLayer/Stats/Speed"]
visible = false
margin_left = 136.0
margin_right = 156.0
margin_bottom = 46.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"

[node name="Skills" type="ItemList" parent="CanvasLayer"]
margin_left = 315.0
margin_top = 42.0
margin_right = 747.0
margin_bottom = 406.0
custom_styles/bg = SubResource( 6 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon_scale = 0.2

[node name="SkillDescription" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 758.0
margin_top = 45.0
margin_right = 1042.0
margin_bottom = 533.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Currency" parent="CanvasLayer" instance=ExtResource( 8 )]

[connection signal="pressed" from="CanvasLayer/FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="CanvasLayer/InventoryBtn" to="." method="_on_InventoryBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/NewBtn" to="." method="_on_NewBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Stats/Strength/Up" to="." method="_on_Up_pressed" binds= [ "strength" ]]
[connection signal="pressed" from="CanvasLayer/Stats/Vitality/Up" to="." method="_on_Up_pressed" binds= [ "vitality" ]]
[connection signal="pressed" from="CanvasLayer/Stats/Intelligence/Up" to="." method="_on_Up_pressed" binds= [ "intelligence" ]]
[connection signal="pressed" from="CanvasLayer/Stats/Speed/Up" to="." method="_on_Up_pressed" binds= [ "speed" ]]
[connection signal="item_selected" from="CanvasLayer/Skills" to="." method="_on_Skills_item_selected"]
